# haribonfire

./: .gitignore  docker-compose.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/database/: db.py
backend/database/controllers/: messages.py  users.py
backend/database/core/: enums.py
backend/database/models/: __init__.py  messages.py  users.py
backend/endpoints/: auth.py  messages.py  singletons.py  users.py  ws.py
backend/schemas/: messages.py  users.py
bruno/: bruno.json
bruno/Messages/: Get Global Messages.bru  Send Global Message.bru
bruno/Users/: Update User Information.bru
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/home/: page.tsx
frontend/src/common/: interfaces.tsx
frontend/src/components/: ChatDivider.tsx  ChatInput.tsx  DateDivider.tsx  HaribonAvatar.tsx  LogoSVG.tsx  Message.tsx  MessageLog.tsx  ModeToggle.tsx  PersonCard.tsx  RandomSVG.tsx  Sidebar.tsx  UserSettings.tsx  theme-provider.tsx
frontend/src/components/major/: Bonfire.tsx  Home.tsx  Private.tsx  Random.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: api.ts  auth.ts  utils.ts
