[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.36",
    "typing-inspect>=0.9.0",
]
